--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 body {
   background-image: url(assets/background.svg);
   background-size: cover;
-
-  width: 100%;
+  background-repeat: no-repeat;
 }
 
 .container-fluid {
   color: #c8c8c8;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 .border-logo {
   border-left: 1px solid #c8c8c8;
   margin-top: 1rem;
+}
+
+.description-header {
+  font-family: "Dancing Script", cursive;
+  font-size: 24px;
 }
 
 .border-container {
@@ -36,12 +40,13 @@ body {
 }
 
 .m-3 {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Inter", sans-serif;
+  font-size: 1.2rem;
   font-weight: 400;
 }
 
 .title {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 64px;
   font-weight: bold;
 }
@@ -54,6 +59,8 @@ body {
   width: 864px;
   height: 130px;
 
+  font-family: "Inter", sans-serif;
+
   color: #c8c8c8;
 }
 
@@ -63,4 +70,90 @@ body {
   margin-left: 8px;
 
   height: 34px;
+}
+
+.btn-stream {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+
+  font-family: "Inter", sans-serif;
+
+  background-color: #d40d1f;
+  color: #ffffff;
+
+  border-radius: 6px;
+  border: none;
+
+  width: 240px;
+  height: 50px;
+
+  margin-top: 2rem;
+}
+.btn-all-ep {
+  background-color: transparent;
+  color: #ffffff;
+
+  font-family: "Inter", sans-serif;
+
+  border-radius: 6px;
+  border: 2px solid white;
+
+  width: 240px;
+  height: 50px;
+
+  margin-top: 2rem;
+}
+
+.titleCard {
+  display: flex;
+  margin-top: 3rem;
+
+  gap: 470px;
+  padding: 1px;
+
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.btn-card {
+  display: flex;
+  align-items: baseline;
+  gap: 10px;
+  margin-top: 5px;
+
+  cursor: pointer;
+}
+
+.cards {
+  display: flex;
+  width: 50%;
+
+  margin-left: -20px;
+  justify-content: space-between;
+
+  gap: 51px;
+}
+
+.retangulo {
+  width: 20px;
+  height: 35px;
+  margin-top: -78px;
+  margin-left: 1400px;
+  background-color: #d40d1f;
+}
+
+.parte-verde {
+  display: flex;
+  width: 79px;
+  height: 35px;
+
+  padding: 10px;
+  margin-left: 20px;
+
+  background-color: #777575;
+
+  text-align: center;
+  align-items: center;
 }
